# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1346 2010-08-31 11:58:26 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta3 ????-??-??
 - 2010-08-31 Fixed bug#5838 - Dialogs are not shown correctly in IE7.
 - 2010-08-31 Fixed bug#5837 - Tooltips have transparent background in IE7.
 - 2010-08-31 Fixed bug#5714 - Selecting a customer in AgentTicketEmail/Phone
    changes "Priority" and "Next ticket state" selections.
 - 2010-08-31 Fixed bug#5791 - When creating a new ticket,
    changing the queue will change the priority and state.
 - 2010-08-30 Fixed bug#5794 - Error when using Customer link when creating new ticket.
 - 2010-08-30 Fixed bug#5807 - New mail account default state is "Invalid".
 - 2010-08-30 Fixed bug#5824 - "Cancel & close window" link do nothing on Bulk operation at Tickets Status.
 - 2010-08-30 Fixed bug#5829 - The body of the most recent article is not shown in the CustomerTicketZoom.
 - 2010-08-30 Fixed bug#5800 - Ticket response drop down.
 - 2010-08-30 Fixed bug#5765 - reply buttons in queue view produce perl error.
 - 2010-08-30 Updated Chinese translation file, thanks to Never Min!
 - 2010-08-30 Fixed bug#5743 - Popup blocker should be detected.
 - 2010-08-30 Fixed bug#5786 - -Reply- dropdown menu not reverting to initial state then closing reply
    window.
 - 2010-08-27 Fixed bug#5833 - The text "Attachment" is above the paper-clip icon in the CustomerTicketZoom.
 - 2010-08-27 Fixed bug#5831 - English language typo: "doesn't exists" should
    be "doesn't exist".
 - 2010-08-27 Updated Polish translation file, thanks to Janek Rumianek!
 - 2010-08-25 Fixed bug#5805 - Customer interface: creation of a new ticket
    requires two clicks on the submit button.