@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1346 2010-08-31 11:58:26 mg Exp $
+# $Id: CHANGES,v 1.1347 2010-08-31 16:21:54 cg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.0.0 beta3 ????-??-??
+ - 2010-08-31 Fixed bug#2671 - Postmaster filter creation does not require a name.
  - 2010-08-31 Fixed bug#5838 - Dialogs are not shown correctly in IE7.
  - 2010-08-31 Fixed bug#5837 - Tooltips have transparent background in IE7.
  - 2010-08-31 Fixed bug#5714 - Selecting a customer in AgentTicketEmail/Phone
